--- a/index.html
+++ b/index.html
@@ -57,6 +57,38 @@
 
             <section>
                 <div>
+                    <h2 class= "title">Jogos que pretendo jogar</h2>
+                    <p>Somente a nata.</p>
+                    <ul class="to-play-list">
+                        <li>
+                            <a 
+                                target="_blank"                            
+                                href="https://www.twitch.tv/directory/game/Cult%20of%20the%20Lamb">
+                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/516173984_IGDB-188x250.jpg" alt="Imagem do Culto da Ovelha">
+                            </a>
+                        </li>
+
+                        <li>
+                            <a 
+                                target="_blank"                            
+                                href="https://www.twitch.tv/directory/game/Temtem">
+                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/510336_IGDB-188x250.jpg" alt="Imagem de Temtem">
+                            </a>
+                        </li>
+
+                        <li>
+                            <a 
+                                target="_blank"                            
+                                href="https://www.twitch.tv/directory/game/The%20Binding%20of%20Isaac%3A%20Repentance">
+                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/491080-188x250.jpg" alt="Imagem de TBoIR">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+
+            <section>
+                <div>
                     <h2 class="title">Canais e Streamers</h2>
                     <p>Lista de canais que acompanho!</p>
                     <ul class="channels-list">
